--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -7,7 +7,7 @@
 <body>
         <h2>Welcome, {{club['email']}} </h2><a href="{{url_for('logout')}}">Logout</a>
 
-    {% with messages = get_flashed_messages()%}
+    {% with messages = get_flashed_messages() %}
     {% if messages %}
         <ul>
        {% for message in messages %}
@@ -15,17 +15,20 @@
         {% endfor %}
        </ul>
     {% endif%}
-    Points available: {{club['points']}}
+    Points available: {{club['points']}}<br />
+    To check the point balance of other clubs, please see our <a href="{{ url_for('full_display') }}">full club display</a>.
     <h3>Competitions:</h3>
     <ul>
-        {% for comp in competitions%}
+        {% for comp in competitions %}
         <li>
             {{comp['name']}}<br />
             Date: {{comp['date']}}</br>
             Number of Places: {{comp['numberOfPlaces']}}
-            {%if comp['numberOfPlaces']|int >0%}
-            <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
-            {%endif%}
+            {% if comp['numberOfPlaces']|int > 0 %}
+              {% if comp not in past_competitions %}
+                <a href="{{ url_for('book', competition=comp['name'], club=club['name']) }}">Book Places</a>
+              {% endif %}
+            {% endif %}
         </li>
         <hr />
         {% endfor %}
